# umamoe-ingest

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  deploy-ingest.yml
.github/workflows/: main.yml
src/: auth.rs  auth_common.rs  errors.rs  main.rs  models.rs
src/handlers/: ingest.rs
